Split Excel tab wise complete

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.password=Th33kH@!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.batch.jdbc.initialize-schema=always
 spring.jpa.show-sql=true
+spring.application.name=ssp
+server.port=8080
+server.servlet.context-path=/ssp
+data.file.location=C:\\Users\\sayan\\Documents\\Education\\data\\
